# docs/ediprogsoc/swagger.json
@@ -31,11 +31,22 @@
                     "events"
                 ],
                 "summary": "Post an event",
+                "parameters": [
+                    {
+                        "description": "Event to post",
+                        "name": "eventToPost",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.Event"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/structs.PostEventResponse"
+                            "$ref": "#/definitions/types.PostEventResponse"
                         }
                     },
                     "400": {
@@ -73,7 +84,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/structs.GetEventByIdResponse"
+                            "$ref": "#/definitions/types.GetEventByIdResponse"
                         }
                     }
                 }
@@ -95,7 +106,7 @@
                 }
             }
         },
-        "structs.Event": {
+        "types.Event": {
             "type": "object",
             "properties": {
                 "description": {
@@ -130,18 +141,18 @@
                 }
             }
         },
-        "structs.GetEventByIdResponse": {
+        "types.GetEventByIdResponse": {
             "type": "object",
             "properties": {
                 "eventData": {
-                    "$ref": "#/definitions/structs.Event"
+                    "$ref": "#/definitions/types.Event"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "structs.PostEventResponse": {
+        "types.PostEventResponse": {
             "type": "object",
             "properties": {
                 "docId": {
